--- a/WordSnapConsoleApp/WordSnapWPFApp/MainWindow.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/MainWindow.xaml
@@ -1,18 +1,9 @@
 ﻿<Window x:Class="WordSnapWPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WordSnapWPFApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0" Margin="20,10">
+        Title="MainWindow" Height="500" Width="900">
+    <DockPanel>
+        <Grid DockPanel.Dock="Top" Background="#333333" Height="50">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -28,32 +19,39 @@
                            FontSize="24" 
                            FontWeight="Bold"
                            FontFamily="Segoe Script"
-                           Foreground="#333333"/>
+                           Foreground="#FFFFFF" 
+                           Margin="10,0"/>
             </Button>
 
             <Button Grid.Column="2" 
                     x:Name="LoginButton"
                     Content="Увійти"
-                    Padding="20,8"
+                    Padding="10,5"
                     Background="#E0E0E0"
                     BorderThickness="0"
                     Foreground="#666666" 
-                    Click="LoginButton_Click">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}"
-                                CornerRadius="15"
-                                Padding="{TemplateBinding Padding}">
-                            <ContentPresenter HorizontalAlignment="Center" 
-                                            VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
+                    Click="LoginButton_Click"
+                    Visibility="Visible" 
+                    Margin="10"/>
         </Grid>
 
-        <Frame Grid.Row="1" 
-               x:Name="MainFrame" 
-               NavigationUIVisibility="Hidden"/>
-    </Grid>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel x:Name="LeftPanel" Visibility="Collapsed" Width="150" Background="#F0F0F0">
+                <Button Content="Головна" Click="HomeButton_Click" Margin="10,5"/>
+                <Button Content="Мої картки" Margin="10,5"/>
+                <Button Content="Збережені" Margin="10,5"/>
+                <Button Content="Вийти" Click="LogoutButton_Click" Margin="10,5"/>
+            </StackPanel>
+
+            <Frame Grid.Column="1" 
+                   x:Name="MainFrame" 
+                   NavigationUIVisibility="Hidden"
+                   Margin="10"/>
+        </Grid>
+    </DockPanel>
 </Window>
