--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/MainPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/MainPage.xaml
@@ -37,17 +37,59 @@
             </Setter>
         </Style>
 
-        <Style x:Key="CardStyle" TargetType="Border">
+        <Style x:Key="CardButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="White"/>
-            <Setter Property="CornerRadius" Value="15"/>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="#E0E0E0"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="150"/>
             <Setter Property="Effect">
                 <Setter.Value>
                     <DropShadowEffect BlurRadius="10" 
                                     ShadowDepth="1" 
                                     Opacity="0.2"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="15" 
+                                Cursor="Hand"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SearchButtonStyle" TargetType="Button">
+            <Setter Property="Width" Value="40"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Margin" Value="10,0,0,0"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="Content" Value="Пошук"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="#808080"
+                                CornerRadius="10"
+                                Cursor="Hand"
+                                Width="{TemplateBinding Width}"
+                                Height="{TemplateBinding Height}"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center">
+                            <TextBlock Text="{TemplateBinding Content}"
+                                       Foreground="White"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
@@ -81,36 +123,8 @@
                  FontSize="14"
                  VerticalAlignment="Center"/>
             <Button x:Name="SearchButton"
-                Width="40"
-                Height="40"
-                Margin="10,0,0,0"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Right"
-                Content="Search"
-                FontSize="12"
-                Click="SearchButton_Click">
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="Button">
-                                    <Border Background="#808080"
-                                            CornerRadius="20"
-                                            Width="80"
-                                            Height="40"
-                                            HorizontalAlignment="Center"
-                                            VerticalAlignment="Center">
-                                        <TextBlock Text="Пошук"
-                                                   Foreground="White"
-                                                   VerticalAlignment="Center"
-                                                   HorizontalAlignment="Center"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Button.Style>
-            </Button>
+                Style="{StaticResource SearchButtonStyle}"
+                Click="SearchButton_Click"/>
         </StackPanel>
 
         <TextBlock Grid.Row="1" 
@@ -124,24 +138,21 @@
         <WrapPanel Grid.Row="2" 
                    Margin="10,0"
                    HorizontalAlignment="Center">
-            <Border Style="{StaticResource CardStyle}" 
-                    Width="200" Height="150">
+            <Button Style="{StaticResource CardButtonStyle}" Click="Card1Button_Click">
                 <TextBox x:Name="Card1TextBox"
                         Style="{StaticResource CardTextBoxStyle}"
                         Text="Card 1"/>
-            </Border>
-            <Border Style="{StaticResource CardStyle}" 
-                    Width="200" Height="150">
+            </Button>
+            <Button Style="{StaticResource CardButtonStyle}" Click="Card2Button_Click">
                 <TextBox x:Name="Card2TextBox"
                         Style="{StaticResource CardTextBoxStyle}"
                         Text="Card 2"/>
-            </Border>
-            <Border Style="{StaticResource CardStyle}" 
-                    Width="200" Height="150">
+            </Button>
+            <Button Style="{StaticResource CardButtonStyle}" Click="Card3Button_Click">
                 <TextBox x:Name="Card3TextBox"
                         Style="{StaticResource CardTextBoxStyle}"
                         Text="Card 3"/>
-            </Border>
+            </Button>
         </WrapPanel>
 
         <StackPanel Grid.Row="3" 
