--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/OwnedCardsetLibraryPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/OwnedCardsetLibraryPage.xaml
@@ -50,6 +50,7 @@
                             <TextBlock Text="+" 
                                        FontSize="100"
                                        FontWeight="Bold"
+                                       Foreground="White"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Top" Margin="0,-16,0,0"/>
                         </Border>
